--- a/elapp/src/main/res/layout/header_text_live_user.xml
+++ b/elapp/src/main/res/layout/header_text_live_user.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <RelativeLayout
-        android:id="@+id/player_user"
+        android:id="@+id/text_live_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
@@ -12,10 +14,10 @@
         android:background="?attr/selectableItemBackground">
 
         <com.easyvaas.common.widget.RoundImageView
-            android:id="@+id/player_user_header"
+            android:id="@+id/text_live_user_header"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/account_bitmap_user"/>
 
@@ -23,41 +25,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@id/player_user_header"
-            android:layout_alignTop="@id/player_user_header"
-            android:layout_alignBottom="@id/player_user_header"
+            android:layout_marginLeft="10dp"
+            android:paddingTop="5dp"
+            android:layout_marginRight="60dp"
+            android:layout_toRightOf="@id/text_live_user_header"
+            android:layout_alignTop="@id/text_live_user_header"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/player_user_name"
+                android:id="@+id/text_live_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nickname"
-                android:layout_marginTop="5dp"
                 android:textColor="@color/title_text_color"
                 android:textSize="16sp"/>
 
             <TextView
-                android:id="@+id/player_user_info"
+                android:id="@+id/text_live_user_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:maxLines="1"
                 android:textColor="@color/text_color_gray"
-                android:text="火眼财经资深投顾"
+                tools:text="火眼财经资深投顾火眼财经资深投顾火眼财经资深投顾"
                 android:textSize="14sp"/>
 
         </LinearLayout>
 
         <TextView
-            android:id="@+id/player_user_follow_button"
+            android:id="@+id/text_live_user_follow_button"
             style="@style/user_focus_button_style"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="20dp"
+            android:layout_alignTop="@id/player_user_name"
             android:layout_marginRight="12dp"
             android:text="@string/user_follow"
             />
-
+        <TextView
+            android:id="@+id/text_live_user_follow_counts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/text_live_user_follow_button"
+            android:layout_alignLeft="@id/text_live_user_follow_button"
+            android:layout_marginRight="12dp"
+            android:gravity="center"
+            android:textColor="@color/text_color_gray"
+            android:textSize="14sp"/>
+        <TextView
+            android:id="@+id/text_live_user_tags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/text_live_user_header"
+            tools:text="大盘解说，股票解析，个股分析"
+            android:layout_marginLeft="20dp"
+            android:textColor="#4281ad"
+            android:textSize="14sp"/>
 
     </RelativeLayout>
     <View
