--- a/elapp/src/main/res/layout/user_follow_item.xml
+++ b/elapp/src/main/res/layout/user_follow_item.xml
@@ -11,7 +11,10 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:padding="14dp">
-
+        <TextView
+            android:id="@+id/user_follow_button"
+            android:text="@string/user_follow"
+            style="@style/user_focus_button_style"/>
         <com.easyvaas.common.widget.MyUserPhoto
             android:id="@+id/user_follow_avator"
             android:layout_width="60dp"
@@ -25,7 +28,9 @@
         <TextView
             android:id="@+id/user_follow_name"
             style="@style/user_text_style"
+            android:layout_toLeftOf="@id/user_follow_button"
             android:layout_alignTop="@id/user_follow_avator"
+            android:maxLines="1"
             android:layout_marginLeft="17dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/user_follow_avator"
@@ -40,9 +45,6 @@
             android:layout_toRightOf="@id/user_follow_avator"
             android:text="这里是我的自我介绍"
             android:textColor="@color/text_gray"/>
-        <TextView
-            android:id="@+id/user_follow_button"
-            android:text="@string/user_follow"
-            style="@style/user_focus_button_style"/>
+
     </RelativeLayout>
 </LinearLayout>
