--- a/elapp/src/main/res/drawable/shape_image_live_stick.xml
+++ b/elapp/src/main/res/drawable/shape_image_live_stick.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="100dp"/>
-    <solid android:color="#672f87"/>
+    <solid android:color="#622d80"/>
     <size
         android:width="22dp"
         android:height="22dp"/>
