--- a/elapp/src/main/res/layout/fragment_chat_message.xml
+++ b/elapp/src/main/res/layout/fragment_chat_message.xml
@@ -4,16 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/chat_tips"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#f8f8f8"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="12dp"
+        android:text="温馨提示：涉及色情，低俗，暴力等聊天内容将被封停账号。文明聊天，从我做起！"
+        android:textColor="@color/text_gray"
+        android:textSize="14sp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/chat_tips"
+        android:layout_above="@+id/chat_input_view"
         android:background="#f8f8f8"/>
 
     <com.easyvaas.elapp.view.ChatInputView
         android:id="@+id/chat_input_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"/>
 
     <FrameLayout
         android:id="@+id/chat_gift_container_fl"
