--- a/elapp/src/main/res/layout/fragment_image_text_live.xml
+++ b/elapp/src/main/res/layout/fragment_image_text_live.xml
@@ -33,7 +33,8 @@
             android:layout_marginRight="12dp"
             android:text="@string/image_live_room_fans"
             android:textColor="#999999"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:visibility="gone"/>
     </FrameLayout>
 
     <com.easyvaas.elapp.view.AutoLoadRecyclerView
