--- a/elapp/src/main/res/layout/item_image_text_live_image.xml
+++ b/elapp/src/main/res/layout/item_image_text_live_image.xml
@@ -45,11 +45,12 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/ll_line"
         android:layout_below="@+id/tv_time"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
+        android:scaleType="centerCrop"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/account_bitmap_list"/>
