--- a/elapp/src/main/res/layout/item_live_video_hot.xml
+++ b/elapp/src/main/res/layout/item_live_video_hot.xml
@@ -27,4 +27,9 @@
         android:textColor="@color/text_color_gray"
         android:textSize="14sp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f8f8f8"/>
+
 </LinearLayout>
