--- a/elapp/src/main/res/layout/fragment_image_text_live.xml
+++ b/elapp/src/main/res/layout/fragment_image_text_live.xml
@@ -109,6 +109,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="16dp"
+                android:visibility="gone"
                 android:src="@drawable/btn_word_comment_n_new"/>
 
             <ImageView
