--- a/elapp/src/main/res/layout/fragment_chat_message.xml
+++ b/elapp/src/main/res/layout/fragment_chat_message.xml
@@ -21,14 +21,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/chat_tips"
-        android:layout_above="@+id/chat_input_view"
+        android:layout_marginBottom="50dp"
         android:background="#f8f8f8"/>
 
     <com.easyvaas.elapp.view.ChatInputView
         android:id="@+id/chat_input_view"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
     <FrameLayout
         android:id="@+id/chat_gift_container_fl"
